<resources>
    <string name="app_name">ATBindingTesterApp</string>

    <!--    parte comune-->
    <string name="next">CONTINUA</string>
    <string name="session_text">sessione</string>
    <string name="trial_id">trial #%1$s</string>
    <string name="abort">interrompi test</string>
    <string name="pause">PAUSA</string>
    <string name="resume">RIPRENDI</string>
    <string name="test_ended">Il Test è terminato</string>

    <string name="name">NOME</string>
    <string name="gender">SESSO</string>
    <string name="age">ETA\'</string>

    <string name="time">tempo</string>
    <string name="frequency">frequenza</string>
    <string name="session">sessione</string>
    <string name="condition">condizione sperimentale</string>

    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="warn_tts_language_notsupported">lingua non supportata dal servizio di text-to-speech</string>
    <string name="error_tts_notinitialized">il servizio di text-to-speech non si é inizializzato</string>

    <string name="char_recognition_error">Errore di riconoscimento del parlato: %1$s</string>
    <string name="char_recognition_empty">Non sono riuscito a riconoscere la risposta</string>
    <string name="char_recognition_wrong">la risposta che hai dato non è corretta, ripeti</string>

    <string name="char_recognition_timeout_error">tempo di attesa scaduto, ripeti</string>
    <string name="char_recognition_network_error">errore di rete</string>
    <string name="char_recognition_busy_error">riconoscitore occupato</string>
    <string name="char_recognition_generic_error">errore generico </string>
    <string name="char_recognition_missing_permission">mancano i permessi per registrare l\'audio</string>

    <!-- ATB -->
    <string name="start_atb">Audio-Tactile Binding (AT-B)</string>
    <string name="atb_interactivity">interattivo</string>

    <string-array name="unused_atb_tests_array">
        <item>normale</item>
        <item>infanti latenze</item>
        <item>infanti frequenze</item>
    </string-array>
    <string name="whitenoise">aggiungi rumore bianco</string>

    <string name="atv_subtask_time_infants">tempo infanti</string>
    <string name="atv_subtask_time_infants_15s">tempo infanti 1.5s</string>
    <string name="atv_subtask_frequency_infants">frequenza infanti</string>

    <string name="atb_rb1_text">uguali</string>
    <string name="atb_rb3_text">diversi</string>
    <string name="atb_question">Sono uguali?</string>

    <!-- ATVB -->
    <string name="start_atvb">Audio-Tactile-Visual Binding (ATV-B)</string>

    <string name="atvb_subtask_time_single">Stimolo singolo</string>
    <string name="atvb_subtask_time_double">Stimilo doppio</string>


    <string name="atvb_rb1_text">si</string>
    <string name="atvb_rb3_text">no</string>
    <string name="atvb_question">Sono uguali?</string>


    <!-- TID -->
    <string name="start_tid">Temporal Interval Discrimination (TID)</string>
    <string name="tid_question_text_audio">L\'intervallo tra la prima coppia di suoni era maggiore o minore dell\'intervallo tra la seconda coppia</string>
    <string name="tid_question_text_tactile">L\'intervallo tra la prima coppia di vibrazione era maggiore o minore dell\'intervallo tra la seconda coppia</string>

    <string name="tid_rb1_text">Più corto il primo</string>
    <string name="tid_rb3_text">Piu corto il secondo</string>

    <string name="tid_rb_male_text">M</string>
    <string name="tid_rb_female_text">F</string>

    <string name="tid_rb_short_text">corti</string>
    <string name="tid_rb_long_text">lunghi</string>

    <string name="tid_rb_audio_text">audio</string>
    <string name="tid_rb_vibro_text">vibro</string>

    <string-array name="tid_sessions_array">
        <item>test iniziale</item>
        <item>1</item>
        <item>2</item>
        <item>seleziona sessione</item>
    </string-array>



    <string name="tid_group_interval_text">gruppo intervallo</string>
    <string name="tid_group_modality_text">gruppo modalità</string>
    <string name="tid_group_first_modality_text">prima modalità</string>

    <string name="tid_insert_subjectdata_button_text">INSERISCI SOGGETTO</string>
    <string name="tid_start_pre_text">INIZIA PRE-TESTS</string>
    <string name="tid_start_post_text">INIZIA POST-TESTS</string>
    <string name="tid_start_training_text">INIZIA TRAINING</string>

    <!-- BISECTION -->
    <string name="start_bisection">MULTIMODAL BISECTION</string>

    <string-array name="bis_sessions_array">
        <item>pre test</item>
        <item>session 1</item>
        <item>session 2</item>
        <item>session 3</item>
        <item>post test</item>
    </string-array>

    <string name="bisection_question_text_audio">Il secondo suono era più vicino al primo o al terzo?</string>
    <string name="bisection_question_text_video">La luce gialla era più vicina alla verde o alla rossa?</string>
    <string name="bisection_question_text_tactile">La seconda vibrazione era più vicina alla prima o alla terza?</string>
    <string name="bisection_question_text_mixed">Il secondo stimolo era più vicino al primo o al terzo?</string>

    <string name="bisection_rb1_text">Più vicino al primo</string>
    <string name="bisection_rb2_text">Uguale</string>
    <string name="bisection_rb3_text">Più vicino al terzo</string>

    <!-- MUSICAL METERS -->
    <string name="start_musicalmeter">MUSICAL METER DISCRIMINATION (MMD)</string>

    <string name="mmeters_question_text">Le due sequenze sono uguali?</string>

    <string name="mmeters_rb1_text">SI, sono uguali</string>
    <string name="mmeters_rb2_text">Uguale</string>
    <string name="mmeters_rb3_text">NO, sono diverse</string>


</resources>
