<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MainFragment">


    <Button
            android:id="@+id/bt_start_tid_test"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="380dp"
            android:layout_height="94dp"
            android:layout_marginTop="40dp"
            android:enabled="true"
            android:text="@string/start_tid"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/bt_start_bisection"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="380dp"
            android:layout_height="98dp"
            android:layout_marginTop="40dp"
            android:enabled="true"
            android:text="@string/start_bisection"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_atb_test" />

    <Button
            android:id="@+id/bt_start_musicalmeter"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="380dp"
            android:layout_height="122dp"
            android:layout_marginTop="32dp"
            android:enabled="true"
            android:text="@string/start_musicalmeter"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_bisection" />

    <Button
            android:id="@+id/bt_start_atb_test"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="380dp"
            android:layout_height="95dp"
            android:layout_marginTop="44dp"
            android:enabled="true"
            android:text="@string/start_atb"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_tid_test" />


</androidx.constraintlayout.widget.ConstraintLayout>