<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment">


    <Button
            android:id="@+id/bt_start_tid_test"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="330dp"
            android:layout_height="76dp"
            android:layout_marginTop="40dp"
            android:text="@string/tid_insert_subjectdata_button_text"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/bt_start_post_test"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="330dp"
            android:layout_height="95dp"
            android:layout_marginTop="40dp"
            android:text="@string/tid_start_post_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_training"
            app:layout_constraintVertical_bias="0.007" />

    <Button
            android:id="@+id/bt_start_training"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="330dp"
            android:layout_height="95dp"
            android:layout_marginTop="36dp"
            android:text="@string/tid_start_training_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_bisection" />

    <Button
            android:id="@+id/bt_start_bisection"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="330dp"
            android:layout_height="95dp"
            android:layout_marginTop="112dp"
            android:text="@string/tid_start_pre_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_tid_test" />


</androidx.constraintlayout.widget.ConstraintLayout>