<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AnswerDialogFragment">


    <TextView
            android:id="@+id/labGroupFirstModality"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="@string/tid_group_first_modality_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labGroupModality" />

    <RadioGroup
            android:id="@+id/radioGroupIntervals"
            android:layout_width="168dp"
            android:layout_height="71dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender">

        <RadioButton
                android:id="@+id/rb_short"
                android:layout_width="82dp"
                android:layout_height="49dp"
                android:text="@string/tid_rb_short_text" />

        <RadioButton
                android:id="@+id/rb_long"
                android:layout_width="85dp"
                android:layout_height="49dp"
                android:text="@string/tid_rb_long_text" />
    </RadioGroup>


    <RadioGroup
            android:id="@+id/radioGroupModality"
            android:layout_width="168dp"
            android:layout_height="71dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupIntervals">

        <RadioButton
                android:id="@+id/rb_audio"
                android:layout_width="82dp"
                android:layout_height="49dp"
                android:text="@string/tid_rb_audio_text" />

        <RadioButton
                android:id="@+id/rb_vibro"
                android:layout_width="85dp"
                android:layout_height="49dp"
                android:text="@string/tid_rb_vibro_text" />
    </RadioGroup>

    <RadioGroup
            android:id="@+id/radioGroupFirstModality"
            android:layout_width="168dp"
            android:layout_height="71dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupModality">

        <RadioButton
                android:id="@+id/rb_first_audio"
                android:layout_width="82dp"
                android:layout_height="49dp"
                android:text="@string/tid_rb_audio_text" />

        <RadioButton
                android:id="@+id/rb_first_vibro"
                android:layout_width="85dp"
                android:layout_height="49dp"
                android:text="@string/tid_rb_vibro_text" />
    </RadioGroup>

    <TextView
            android:id="@+id/labGender"
            android:layout_width="120dp"
            android:layout_height="31dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:text="@string/tid_gender_text"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupGender"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labAge" />

    <TextView
            android:id="@+id/labGender2"
            android:layout_width="120dp"
            android:layout_height="31dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="36dp"
            android:text="@string/session_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labGender" />

    <TextView
            android:id="@+id/labGroupInterval"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:text="@string/tid_group_interval_text"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupIntervals"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labGender2" />

    <TextView
            android:id="@+id/labGroupModality"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:text="@string/tid_group_modality_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labGroupInterval" />

    <ImageButton
            android:id="@+id/bt_clear"
            android:layout_width="109dp"
            android:layout_height="65dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labGroupFirstModality"
            app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
            android:id="@+id/bt_confirm"
            android:layout_width="112dp"
            android:layout_height="62dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupFirstModality"
            app:srcCompat="@drawable/green_tick" />

    <TextView
            android:id="@+id/labAge"
            android:layout_width="120dp"
            android:layout_height="28dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:text="@string/tid_age_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labName" />

    <TextView
            android:id="@+id/labName"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/tid_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/txtAge"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="none|number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
            android:id="@+id/txtName"
            android:layout_width="164dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.816"
            app:layout_constraintStart_toEndOf="@+id/labName"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="166dp"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAge">

        <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="81dp"
                android:layout_height="46dp"
                android:text="@string/tid_rb_male_text" />

        <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="59dp"
                android:layout_height="45dp"
                android:text="@string/tid_rb_female_text" />
    </RadioGroup>

    <Button
            android:id="@+id/bt_cancel"
            android:layout_width="357dp"
            android:layout_height="57dp"
            android:layout_marginTop="28dp"
            android:text="Cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.851"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_confirm" />

    <Spinner
            android:id="@+id/spSession"
            android:layout_width="167dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

</androidx.constraintlayout.widget.ConstraintLayout>